﻿Versão 1.0.6:
Adicionado MD5 Checker - Verifica a versão actual

Versão 1.0.5:
Fix para users com caracter especial

Versão 1.0.4:
Adicionada tradução / Added translation
Minor fixes

Versão 1.0.3:
Adicionado suporte a iOS
Força permissões em todos os OS's
Adicionada opção de Update/Restore

Versão 1.0.2:
Adicionado suporte a raspberry - Openelec inclusive
Corrigido bug em que era impossível actualizar librtmp em Linux
Melhoramento na actualização do librtmp em Windows

Versão 1.0.1:
Adicionado aviso para versões Helix (não instalar)
Adicionado suporte a Linux

Versão 1.0.0:
Primeira versão
Suporte a Android e Windows